everything/gitops/apps/piano/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piano-backend
  namespace: piano
  labels:
    app: piano-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: piano-backend
  template:
    metadata:
      labels:
        app: piano-backend
    spec:
      containers:
        - name: backend
          image: registry.lab.i-tems.com/piano-backend:SEED
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
