everything/gitops/apps/piano/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: piano-backend
  namespace: piano
  labels:
    app: piano-backend
spec:
  type: ClusterIP
  selector:
    app: piano-backend
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
